[project]
name = "wachbuch-pdf-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair==5.5.0",
    "arabic-reshaper==3.0.0",
    "asn1crypto==1.5.1",
    "attrs==24.3.0",
    "blinker==1.9.0",
    "brotli==1.1.0",
    "cachetools==5.5.0",
    "certifi==2024.12.14",
    "cffi==1.17.1",
    "chardet==5.2.0",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "cryptography==44.0.0",
    "cssselect2==0.7.0",
    "defusedxml==0.7.1",
    "fonttools==4.55.3",
    "fpdf2==2.8.2",
    "gitdb==4.0.11",
    "gitpython==3.1.43",
    "google-auth-oauthlib==1.2.1",
    "google-auth==2.37.0",
    "gspread==6.1.4",
    "html5lib==1.1",
    "idna==3.10",
    "jinja2==3.1.5",
    "jsonschema-specifications==2024.10.1",
    "jsonschema==4.23.0",
    "lxml==5.3.0",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "narwhals==1.19.1",
    "numpy==2.0.2",
    "oauthlib==3.2.2",
    "oscrypto==1.3.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "pdfkit==1.0.0",
    "pillow==11.0.0",
    "protobuf==5.29.2",
    "pyarrow==18.1.0",
    "pyasn1-modules==0.4.1",
    "pyasn1==0.6.1",
    "pycparser==2.22",
    "pydeck==0.9.1",
    "pydyf==0.11.0",
    "pygments==2.18.0",
    "pyhanko-certvalidator==0.26.5",
    "pyhanko==0.25.3",
    "pypdf==5.1.0",
    "pyphen==0.17.0",
    "python-bidi==0.6.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "qrcode==8.0",
    "referencing==0.35.1",
    "reportlab==4.2.5",
    "requests-oauthlib==2.0.0",
    "requests==2.32.3",
    "rich==13.9.4",
    "rpds-py==0.22.3",
    "rsa==4.9",
    "six==1.17.0",
    "smmap==5.0.1",
    "streamlit==1.41.1",
    "svglib==1.5.1",
    "tenacity==9.0.0",
    "tinycss2==1.4.0",
    "tinyhtml5==2.0.0",
    "toml==0.10.2",
    "tornado==6.4.2",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "tzlocal==5.2",
    "uritools==4.0.3",
    "urllib3==2.3.0",
    "watchdog==6.0.0",
    "weasyprint==63.1",
    "webencodings==0.5.1",
    "wkhtmltopdf==0.2",
    "xhtml2pdf==0.2.16",
    "zopfli==0.2.3.post1",
]
